- premake5 include 경로 vs 테스트.

--- a/doc/3. 프로젝트 셋업.md
+++ b/doc/3. 프로젝트 셋업.md
@@ -6,19 +6,4 @@
 
 
 
-프로젝트를 생성하고 빌드를 진행한 후 테스트를 작성하면서 전체를 다시 본다. 코드 커버리지 툴을 확인한다. 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+프로젝트를 생성하고 빌드를 진행한 후 테스트를 작성하면서 전체를 다시 본다.
