--- a/doc/4. base.md
+++ b/doc/4. base.md
@@ -11,3 +11,32 @@
   - 필요한 기능이 전부 딱 그만큼 있도록 한다. 
 
 
+## macros.hpp
+
+```c++
+#define WISE_ASSERT(c)
+/// precondition
+#define WISE_EXPECT(c) WISE_ASSERT(c)		 
+/// post condition
+#define WISE_ENSURE(c) WISE_ASSERT(c)
+
+#define WISE_RETURN_IF(c, v) 
+#define WISE_BREAK_IF(c, v) 
+#define WISE_CONTINUE_IF(c, v) 
+#define WISE_RETURN_CALL_IF(c, v, func) 
+
+#define WISE_UNUSED(v) v
+```
+
+위의 매크로들을 모두 테스트한다는 뜻은 무엇일까? 꼭 해야할까?
+
+- WISE_ASSERT 성공 
+  - 이건 쉽다. 
+- WISE_ASSERT Fail 
+  - assert(c)로 인해 다이얼로그가 뜨고 디버깅에 들어간다. 
+  - 한번 하면 disable 시킨다. 
+  - 히스토리를 누적할 수 있어야 한다. 
+
+- WISE_BREAK_IF(c, v)에서 v는 불필요 
+  - 이런 구조가 불필요해 보여 제거 
+
