--- a/doc/4. macros.md
+++ b/doc/4. macros.md
@@ -1,17 +1,5 @@
-# base 
 
-로거, 틱, 타이머 등 기본 기능들. 
-
-순서대로 작성. 
-
-- 100% 커버리지 목표 
-  - 단위 테스트를 그렇게 작성한다. 
-- 개별로 완전하게 만든다 
-  - 오버 스펙은 주의한다. 
-  - 필요한 기능이 전부 딱 그만큼 있도록 한다. 
-
-
-## macros.hpp
+# macros.hpp
 
 ```c++
 #define WISE_ASSERT(c)
