--- a/doc/5. logger.md
+++ b/doc/5. logger.md
@@ -4,3 +4,28 @@
 클래스별로 로깅 레벨을 잘 조절할 수 있다면 더 좋다. 
 
 
+## filesystem 
+
+아직 실험 단계에 있다. 제일 하단의 기반이라 clang 등에서 지원하지 않으면 
+호환성이 낮아진다. 그래도 있으면 좋고 있어야 하는 걸로 보인다. 
+
+clang, g++에 모두 포함되었기 때문에 문제되지 않을 듯 하다. 
+wrapper를 두고 사용은 한다. 
+
+/std::c++17 로 활성화 해야 한다. 
+
+- premake5
+    - buildoptions { "/std:c++17" }
+    - vs 프로젝트 파일에 추가 옵션에 들어가고 제대로 동작한다. 
+
+컴파일러마다 옵션을 설정해야 하지만 premake5의 도움을 받아 처리해 나가면 될 듯 하다. 
+
+C++은 매크로로 구성 가능하므로 잘 활용한다. 
+
+## spdlog 
+
+- build 
+    - cmake 
+- premake5 설정 
+
+
