--- a/doc/8. spinlock.md
+++ b/doc/8. spinlock.md
@@ -50,6 +50,9 @@ i.is_lock_free()
 플래폼 타겟에서 결정. 
 
 
+수정 순서를 정하는 규칙들에 따라 relaxed, acquire, release 등이 있다.
+주어진 규칙 하에서 개별 메모리 접근의 쓰레드 간 순서를 찾을 수 있어야 한다.
+
 
     
 
