memory 복원. 작업 재개.

--- a/doc/9.1 사용 추적 시스템.md
+++ b/doc/9.1 사용 추적 시스템.md
@@ -61,6 +61,13 @@ class object : public mem_tracked
    - build system 
    - 항상 새로운 것들이 나타낸다. 
 
+## 방향
+
+트래킹! 나중에 게임 쪽은 object 기반 클래스와 shared_ptr로 관리한다. 중심이 되는 클래스를 두고 여기에 붙여서 쓰면 된다. 
+
+실수하는 경우가 있어 이를 찾고 프로파일링도 자체적으로 하려면 트래킹이 필요하다. 
+전에 구현한 정도가 나쁘지는 않았다. 다시 살펴서 트래킹 시스템으로 가도록 한다. 
+
 
 
 
