mem_tracker 테스트와 사용법 정리

--- a/doc/9.1 사용 추적 시스템.md
+++ b/doc/9.1 사용 추적 시스템.md
@@ -69,6 +69,29 @@ class object : public mem_tracked
 전에 구현한 정도가 나쁘지는 않았다. 다시 살펴서 트래킹 시스템으로 가도록 한다. 
 
 
+## 메모리 추적 
+
+아이디어는 다음과 같다. 
+
+- wise_new, wise_shared, wise_unique를 사용하여 추적 표시
+- global new, delete operator 재정의 
+- global delete operator에서 해제시 추적 메모리인 지 확인 
+  - 해당하면 누수 관리 
+  - 사용 통계 
+    - 증가 추적 
+- 타잎 아이디 사용하여 타잎별 할당 메모리 추적 
+
+
+### 릴리스 모드 빌드 이슈
+
+```c++
+2>wise.kernel.lib(memory.obj) : error LNK2019: "
+char __cdecl fmt::v6::internal::decimal_point_impl<char>(class fmt::v6::internal::locale_ref)" (??$decimal_point_impl@D@internal@v6@fmt@@YADVlocale_ref@012@@Z) 외부 기호(참조 위치: 
+"public: void __cdecl fmt::v6::internal::basic_writer<class fmt::v6::buffer_range<char> >::write<float,0>(float,struct fmt::v6::basic_format_specs<char>)" (??$write@M$0A@@?$basic_writer@V?$buffer_range@D@v6@fmt@@@internal@v6@fmt@@QEAAXMU?$basic_format_specs@D@23@@Z) 함수)에서 확인하지 못했습니다.
+2>wise.kernel.lib(memory.obj) : error LNK2019: "class std::basic_string<char,struct std::char_traits<char>,class std::allocator<char> > __cdecl fmt::v6::internal::grouping_impl<char>(class fmt::v6::internal::locale_ref)" (??$grouping_impl@D@internal@v6@fmt@@YA?AV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@Vlocale_ref@012@@Z) 외부 기호(참조 위치: "public: void __cdecl fmt::v6::internal::basic_writer<class fmt::v6::buffer_range<char> >::int_writer<char,struct fmt::v6::basic_format_specs<char> >::on_num(void)" (?on_num@?$int_writer@DU?$basic_format_specs@D@v6@fmt@@@?$basic_writer@V?$buffer_range@D@v6@fmt@@@internal@v6@fmt@@QEAAXXZ) 함수)에서 확인하지 못했습니다.
+2>wise.kernel.lib(memory.obj) : error LNK2019: "char __cdecl fmt::v6::internal::thousands_sep_impl<char>(class fmt::v6::internal::locale_ref)" (??$thousands_sep_impl@D@internal@v6@fmt@@YADVlocale_ref@012@@Z) 외부 기호(참조 위치: "public: void __cdecl fmt::v6::internal::basic_writer<class fmt::v6::buffer_range<char> >::int_writer<char,struct fmt::v6::basic_format_specs<char> >::on_num(void)" (?on_num@?$int_writer@DU?$basic_format_specs@D@v6@fmt@@@?$basic_writer@V?$buffer_range@D@v6@fmt@@@internal@v6@fmt@@QEAAXXZ) 함수)에서 확인하지 못했습니다.
+2>..\build\bin\wise.kernel.test\Release\wise.kernel.test.exe : fatal error LNK1120: 3개의 확인할 수 없는 외부 참조입니다.
+```
 
 
 
