- 폴더와 이름 변경. 구조가 중요하다.

--- a/doc/11. net.md
+++ b/doc/11. net.md
@@ -17,3 +17,7 @@ https://github.com/Lichtso/netLink.git
 
 msgpack 기능을 옮겨서 포팅한다. zen packer 등을 반영하여 최대한 빠르고 간결하게 만든다. 
 
+## protocol과 session
+
+외부에서는 packet을 통해 protocol_ptr만 안다. 
+
