--- a/doc/11.3 기본 프로토콜 구현.md
+++ b/doc/11.3 기본 프로토콜 구현.md
@@ -77,6 +77,9 @@ bits를 먼저 구현하고 (이전에 한번 했으므로), protobuf로 여러 
 
 bitsery 변경이 꽤 있다. 이를 반영한다. 외부에 둬도 될 지 모르겠다.
 
+- 자체 구현으로 결국 변경했다. 
+- IDL이 있어야 언어 지원이 가능하다. 
+- 이전에 작업한 내용을 버릴 필요는 없고 괜찮은 편이다. 
 
 
 
