- botan 빌드 및 cipher/checksum 컴파일 (std::iterator 관련 경고 나옴)

--- a/doc/11.3.1 botan.md
+++ b/doc/11.3.1 botan.md
@@ -110,3 +110,21 @@ std::aligned_storage<>는 무엇인가?
 - core/botan/arch의 각 폴더에 복사 
 - 헤더와 cpp 나눠서 복사
 - #include <wise.kernel/core/botan/botan.hpp>를 포함하도록 수정
+
+
+# dll 라이브러리화 
+
+몇 가지 이슈가 있어 아말가레이션이 잘 안 된다. 외부 라이브러리로 포함하여 사용한다. 
+
+\configure.py --cpu=x64 --os=windwos --cc=msvc 
+\configure.py --cpu=x86 --os=windwos --cc=msvc 
+
+플래폼 별로 빌드한다. 
+
+x64 native developer command prompt를 실행한다. 
+
+빌드가 오래 걸리지는 않는다. 
+
+
+
+
