- test_bits_protocol 제외하고 빌드   - boost 자체 빌드 (bits 빌드 문서 참조)

--- a/doc/11.3.3 bits 흐름 구성 및 빌드.md
+++ b/doc/11.3.3 bits 흐름 구성 및 빌드.md
@@ -23,6 +23,83 @@ bits_node는 tcp_node로 bits_protocol을 만드는 역할을 한다.
 bits_node는 tcp_node에서 일을 다 하니 할 일이 거의 없다. 분리된 노드 형식으로 의미가 있고
 독자적으로 발전할 수 있기 때문에 맘에 든다. 
 
+## iterator 오류 수정 
+
+c++ 17 표준에서 수정된 이전의 잘못된 사용관련 경고. 
+
+```c++
+template <typename Elem>
+class resize_buffer_iterator
+	: public std::iterator<
+	std::random_access_iterator_tag,
+	Elem,
+	ptrdiff_t,
+	Elem*,
+	Elem&>
+```
+위와 같이 표준 반복자를 상속해서 구현할 필요가 없고, 그렇게 할 경우 논리적인 오류들이 발생하는 것으로 보인다.
+배경, 개념을 정리하고 수정한다.
+
+### 자료 읽기 
+
+https://www.fluentcpp.com/2018/05/08/std-iterator-deprecated/
+
+std::iterator는 iterator traits를 제공한다. 
+- value_type
+- iterator category 
+  - std::input_iterator_tag, ... 
+- difference_type, pointer, reference
+
+static interface를 제공하기 위해 필요하다.
 
 
+그냥 포인터를 제공하기 위해 iterator_traits indirection이 필요하다. 
+
+std::iterator_traits<Iterator>::value_type으로 하거나 
+T*이면 std::iterator_traits<T*>::value_type이 T*
+std::iterator_traints<T*>::iterator_category가 std::random_access_iterator_tag가 된다. 
+
+
+
+
+## botan 경고 수정 
+
+```
+  this header is deprecated
+  this header will be made internal in the future
+  this header is deprecated
+  this header is deprecated
+```
+
+오류 메세지가 위와 같아 알기 어렵다. checksum.cpp 에서 확인한다. 
+
+
+## boost 링크 
+
+libboost_date_time-vc142-mt-sgd-x64-1_72.lib 를 찾는다. boost는 이렇게 딸려 오는 문제가 생긴다. 
+특별히 쓴 곳은 없어 보인다.
+
+큰 수술이지만 늦기 전에 독립 asio로 전환한다. boost를 선택적으로 헤더로만 사용할 수 있어야 
+여러 플래폼 지원이 쉽다. 아니면 boost도 다 빌드할 생각을 해야 한다. 어떤게 나은가? 
+
+빌드부터 해서 사용하는 과정을 진행해 보자. 
+
+### 빌드 
+
+```
+bootstrap 
+.\b2 
+```
+
+이게 다이니 한번 써보자. 
+
+매우 부드럽게 진행된다. stage/libs에 lib 파일들이 생긴다. 
+
+
+- 그냥 하면 sgd 없는 것과 gd가 생성된다. 
+- 정적인 링크는 runtime-link=static로 빌드 
+  - 빌드 진행한다. 
+
+cpu 100%를 꽉 채우면서 빌드된다. 
+되었다. 매우 부드럽게 진행된다. 마음에 든다. 맘껏 쓰자.
 
