--- a/doc/9.1 사용 추적 시스템.md
+++ b/doc/9.1 사용 추적 시스템.md
@@ -93,6 +93,10 @@ char __cdecl fmt::v6::internal::decimal_point_impl<char>(class fmt::v6::internal
 2>..\build\bin\wise.kernel.test\Release\wise.kernel.test.exe : fatal error LNK1120: 3개의 확인할 수 없는 외부 참조입니다.
 ```
 
+### 결과 
+
+꽤 빠르게 중요 메모리를 추적할 수 있고 동적으로 disable 시키면 거의 
+영향이 없다. 다듬어 나가면 완전한 시스템이 될 수 있다. 
 
 
 
