bits_protocol 마무리

--- a/doc/11.3.3 bits 흐름 구성 및 빌드.md
+++ b/doc/11.3.3 bits 흐름 구성 및 빌드.md
@@ -176,3 +176,9 @@ bootstrap
 cpu 100%를 꽉 채우면서 빌드된다. 
 되었다. 매우 부드럽게 진행된다. 마음에 든다. 맘껏 쓰자.
 
+
+## fmt 관련 오류
+
+FMT_HEADER_ONLY 매크로 적용이 없어서 발생한 문제였다. 
+fmt는 c++20 표준에 포함된다고 한다.
+
