- buffer 테스트 - modifier 테스트 (진행 중)

--- a/doc/11.3.1 botan.md
+++ b/doc/11.3.1 botan.md
@@ -112,19 +112,66 @@ std::aligned_storage<>는 무엇인가?
 - #include <wise.kernel/core/botan/botan.hpp>를 포함하도록 수정
 
 
-# dll 라이브러리화 
+# 라이브러리화 
 
 몇 가지 이슈가 있어 아말가레이션이 잘 안 된다. 외부 라이브러리로 포함하여 사용한다. 
 
-\configure.py --cpu=x64 --os=windwos --cc=msvc 
-\configure.py --cpu=x86 --os=windwos --cc=msvc 
+\configure.py --cpu=x64 --os=windows --cc=msvc --msvc-runtime=MT --enable-static-library
+\configure.py --cpu=x86 --os=windows --cc=msvc --msvc-runtime=MT --enable-static-library
+
+MT 구성을 지원하는 옵션이 있어 추가해서 빌드. 
 
 플래폼 별로 빌드한다. 
 
 x64 native developer command prompt를 실행한다. 
 
-빌드가 오래 걸리지는 않는다. 
+nmake 실행하면 빌드됨
 
 
+## 다시 빌드 오류 
 
+```c++
+1>cipher.obj : warning LNK4006: "public: void __cdecl Botan::Buffered_Computation::update(unsigned char const * const,unsigned __int64)" (?update@Buffered_Computation@Botan@@QEAAXQEBE_K@Z)이(가) botan.lib(botan.dll)에 이미 정의되어 있습니다. 초 정의가 무시됩니다.
+1>cipher.obj : warning LNK4006: "public: void __cdecl Botan::Buffered_Computation::update(class std::vector<unsigned char,class std::allocator<unsigned char> > const &)" (?update@Buffered_Computation@Botan@@QEAAXAEBV?$vector@EV?$allocator@E@std@@@std@@@Z)이(가) botan.lib(botan.dll)에 이미 정의되어 있습니다. 초 정의가 무시됩니다.
+1>checksum.obj : warning LNK4006: "public: void __cdecl Botan::Buffered_Computation::update(unsigned char const * const,unsigned __int64)" (?update@Buffered_Computation@Botan@@QEAAXQEBE_K@Z)이(가) botan.lib(botan.dll)에 이미 정의되어 있습니다. 초 정의가 무시됩니다.
+1>checksum.obj : warning LNK4006: "public: void __cdecl Botan::Buffered_Computation::final(unsigned char * const)" (?final@Buffered_Computation@Botan@@QEAAXQEAE@Z)이(가) botan.lib(botan.dll)에 이미 정의되어 있습니다. 초 정의가 무시됩니다.
+```
+
+헤더 복사를 누락해서 발생한 문제로 보인다. botan 처럼 여러 플래폼을 지원할 경우 cmake나 scons 사용을 
+고려하는 게 좋다. godot에서 scons를 사용하고 있고 cmake는 많이 쓰이는 것에 비해 깔끔해보이지가 않는다. 
+특히, 프로그래밍이 가능한 툴들이 있는데 cmake는 그렇지 않다. 장단점은 있다. 
+
+헤더 파일들 복사하니 다시 dll 로 임포트 하려는 오류가 발생한다. 
+
+최종 구성이길. 
+
+configure.py --cpu=x64 --os=windows --cc=msvc --msvc-runtime=MT --enable-static-library
+configure.py --cpu=x86 --os=windows --cc=msvc --msvc-runtime=MT --enable-static-library
+
+사용하는 라이브러리를 포함하여 전체 빌드를 포함한 CI 구성을 갖추려면 SCons가 괜찮을 듯 하다. 
+진행하면서 더 살펴보자. 
+
+디버그 빌드도 필요하다. 
+
+configure.py --cpu=x64 --os=windows --cc=msvc --msvc-runtime=MT --enable-static-library --debug-mode
+configure.py --cpu=x86 --os=windows --cc=msvc --msvc-runtime=MT --enable-static-library
+
+
+```c++
+1>wise.kerneld.lib(hash.obj) : error LNK2038: '_ITERATOR_DEBUG_LEVEL'에 대해 불일치가 검색되었습니다. '0' 값이 '2'(test_channel.obj에 위치) 값과 일치하지 않습니다.
+
+```
+
+--debug-mode로 빌드하고 링크했으나 같은 오류가 나온다. 
+
+configure.py --cpu=x64 --os=windows --cc=msvc --msvc-runtime=MTd --enable-static-library --debug-mode
+
+디버그는 위의 옵션으로 빌드해야 한다. 
+
+
+## prebuilt와 github의 lfs 지원 
+
+큰 파일은 lfs로 관리해 주는 게 예의다. 
+
+긴 여정이었다. botan에 더 익숙해졌다. 
 
