bits_packer 테스트

--- a/doc/11.3.1 botan.md
+++ b/doc/11.3.1 botan.md
@@ -175,3 +175,7 @@ configure.py --cpu=x64 --os=windows --cc=msvc --msvc-runtime=MTd --enable-static
 
 긴 여정이었다. botan에 더 익숙해졌다. 
 
+## botan_d.lib pdb 정보 
+
+pdb 파일 연결에 대해 알아보고 pdb를 git에 추가한다. 
+
