--- a/doc/11.3.5 bits 테스트.md
+++ b/doc/11.3.5 bits 테스트.md
@@ -64,4 +64,6 @@ static으로 풀을 공유하게 만들었는데 이 때문에 종료 시 로거
 protocol에서 분리했다. 이건 대단한 일이다. 별도로 단위 테스트가 가능하다. 
 다른 modifier 추가도 쉬워졌다. 
 
+## bits_packer 
+
 
