- modifier 추가 테스트 - assertion 추가

--- a/doc/11.3.5 bits 테스트.md
+++ b/doc/11.3.5 bits 테스트.md
@@ -18,7 +18,6 @@ net 계층에서 가장 중요한 마무리이다. 사용성을 결정하기 때
 - 테스트 진행 
 
 
-
 ### topic 정의 
 
 
@@ -65,5 +64,7 @@ protocol에서 분리했다. 이건 대단한 일이다. 별도로 단위 테스
 다른 modifier 추가도 쉬워졌다. 
 
 ## bits_packer 
+
+이전에 작성한 테스트까지 완료 
 
 
