buffer coverage test 중.

--- a/doc/11.3.6 bits 커버리지 테스트.md
+++ b/doc/11.3.6 bits 커버리지 테스트.md
@@ -33,4 +33,35 @@ http://www.inf.ed.ac.uk/teaching/courses/ar/HoareLogicSlides2016.pdf
 { X = x ^ Y = y } C { Y = max(x, y)}
 
 
+## fixed_size_buffer_pool 
+
+커버리지 테스트를 시도하면서 버그를 찾았다. 이렇게 마음을 먹고 진행하는 게 중요하다. 
+
+## segment 
+
+```c++
+	auto possible_len = std::min(len, Length - pos_);
+	WISE_RETURN_IF(possible_len == 0, 0);
+```
+
+버그다. 이것도 모든 코드 흐름을 검증하고 테스트 하겠다는 마음을 먹지 않으면 발견하기 어렵다. 
+
+Length, pos_ 모두 unsigned 타잎이다. 
+
+	WISE_ENSURE(Length >= pos_);
+
+위 assertion이 추가되어야 한다. 
+안정성에 핵심인 코드들이다. 매우 중요하다. 
+
+
+## multiple_size_buffer_pool 
+
+풀 크기를 넘어서는 블럭 처리에 버그가 있었다. 코드를 중간에 변경했는데 이전에도 문제가 있었다.  
+release에 넘어온 블럭에 대한 검증이 없었다. 
+
+
+## resize_buffer 
+
+invariant 추가. pos_, read_pos_
+
 
