--- a/doc/11.3.6 bits 커버리지 테스트.md
+++ b/doc/11.3.6 bits 커버리지 테스트.md
@@ -64,4 +64,17 @@ release에 넘어온 블럭에 대한 검증이 없었다.
 
 invariant 추가. pos_, read_pos_
 
+## slot_vector 
+
+단위 테스트와 기능 테스트로 커버리지 안 된 코드는 작성하지도 말고 쓰지도 말라. 
+assert, precondition, postcondition은 정확한 코드 작성에 매우 중요하다. 
+
+이렇게 적은 코드에 버그가 한 10개는 있었다. 한번 작성할 때 잘 해야 하지만 
+테스트가 코딩의 매우 중요한 수단이다. 
+
+ADT로 만드는 과정에서도 매우 중요하다. TDD가 지향하는 바가 그러하다. 
+
+잠시 반성삼아 TDD 자료를 읽는다. 
+
+
 
