bits_protocol까지 한 바퀴 진행. - TODO: 종료 처리 깔끔하게 정리

--- a/doc/11.3.7 종료 처리.md
+++ b/doc/11.3.7 종료 처리.md
@@ -8,3 +8,11 @@ what are the states involved?
 automata와 hoare logic으로 먼저 해결한다. 
 함수형 처리로 한번 더 생각한다. 
 
+## 릴리스 모드 메모리 에러 
+
+디버그에서는 괜찮은데 loopback 테스트 부분에서 오류가 난다. 
+bits_node가 먼저 사라지면서 ios가 없어져서 asio 쪽에서 에러 난다. 
+
+잠재적인 문제가 있으니 종료 관련 semantics 정리 후 본다. 
+
+
