demo 준비. service 관련 설계.

--- a/doc/12.1 fmt 사용.md
+++ b/doc/12.1 fmt 사용.md
@@ -26,8 +26,12 @@ MPL과 템플릿 일반은 처음 영어를 배울 때처럼 끊어읽기가 중
 
 basic_writer<>::write<> 함수에서 참조한 decimal_point_impl<char>() 함수를 찾을 수 없다는 오류이다. 
 
-디버그 빌드는 된다. 왜 그럴까? 디버그 빌드에서는 해당 함수들이 최적화되어 사라지지 않기 때문이다. 
-사용하고 있는데 사라진 함수가 된다. 
+## 원인과 해결
+
+fmt를 바로 include 하면 header only를 포함하지 않고 외부 라이브러리를 사용하려 한다.
+core/fmt.hpp에서 FMT_HEADER_ONLY를 정의하고 포함하도록 했다.
+
+fmt는 c++ 20에 표준으로 포함될 예정이다.
 
 
 
