--- a/doc/13.1 actor.md
+++ b/doc/13.1 actor.md
@@ -20,7 +20,17 @@ actor
 - subscribe()
 - publish()
 
+service: 
+- 액터 시스템에 해당한다. 
+- 액터들을 생성하고 클러스터를 구성한다. 
 
+계층으로 구성된 액터들에 메세지를 어떻게 효율적으로 전달할 것인가? 
+액터들은 생성 / 소멸은 가끔 되고 자주 참조되므로 rw lock이면 효율적으로 보인다. 
+채널에 메세지를 넣는 것이 끝이다. 
 
+ 
+## 진행 
+
+로컬 테스트로 잘 동작해야 한다. 로컬도 메세지로 전파된다. 네트워크 메세지를 IDL로 쉽게 설정 가능해야 한다. 
 
 
