actor 설계 진행 중

--- a/doc/13.1 actor.md
+++ b/doc/13.1 actor.md
@@ -16,9 +16,9 @@
 actor 
 - task이며 channel을 갖는다. 
 - children 
-- send() 
-- subscribe()
-- publish()
+- subscribe() 
+- protected send() 
+
 
 service: 
 - 액터 시스템에 해당한다. 
@@ -28,9 +28,85 @@ service:
 액터들은 생성 / 소멸은 가끔 되고 자주 참조되므로 rw lock이면 효율적으로 보인다. 
 채널에 메세지를 넣는 것이 끝이다. 
 
- 
-## 진행 
+깔끔하게 만들려면 실험하면서 설계하는 게 필요하다. 
+버린다고 생각하고 여러 번 만들고 다듬는다. 매우 중요한 작업이다. 
 
-로컬 테스트로 잘 동작해야 한다. 로컬도 메세지로 전파된다. 네트워크 메세지를 IDL로 쉽게 설정 가능해야 한다. 
+준비: 
+- actor 주소 : suid 
+- actor clustering 
+  - announce actor presence / state
+  - actor remote reference 
+    - how to acquire
+  - request with a response guarantee
+    - either with a real response or error callback
+  - clients as actors
+  - routing messages
+
+복잡해지고 있지만 강력하다는 증거이기도 하다. 잘 가자.
+c에 가까운 면을 유지한다. (타잎 safety를 강제하지 않는다. template magic도 덜 쓴다)
+
+게임 플레이 엔티티는 actor가 아니다. 분산 처리만 actor로 한다. 
+entity, component로 한다. 비슷한 면이 있긴 하다.  
+
+service : actor 
+- public actor announced to the cluster 
+
+scene : actor
+  - system 
+    - sys_entity
+      - entity
+        - pc / npc / drop_item / monster / volume
+      - component
+        - com_inventory 
+        - com_movement
+        - com_quest
+        - com_party
+    - sys_spatial
+      - navigation and collision
+      - send_near()
+      - send_all()
+      - send_others()
+    - sys_item
+    - sys_drop
+    - sys_quest
+
+svc_lobby: service
+  - entity 
+    - user 
+
+backend:
+ - svc_auth : service
+ - svc_guild : service
+ - svc_party : service
+ - svc_chat : service
+   - channel
+     - users (client actor refs == address)
+ - svc_match : service
+
+scene_service : service
+- scene 액터들
+  - 지역별 / 인스턴스별 장면 처리 
+  - 내부적으로 다중 쓰레드이건, 단일 쓰레드이건
+
+밧데리가 있도록 한다. 껍데기만 있으면 안 된다. 추상화된 생각은 구체적인 게임 만드는 게 편하도록 해야 한다. 
+메세지 처리가 게임은 아니다. 
+
+service, actor, system까지 묶어서 생각하고 클라이언트와 다른 서비스 연결과 사용이 쉽도록 한다. 
+
+
+## 참고 자료 
+
+caf : 
+- c++ actor framework 
+- 여러 가지 아이디어들과 구현 기법들이 있다. 
+- wise.kernel은 actor 시스템이 아닌 분산 시스템에 액터 개념 일부를 차용하는 것이다. 
+- 따라서, 더 간결하고 고전적인 게임 서버를 지향한다. 
+- 거기에 액터 개념으로 분산 시스템을 올린다. 
+
+akka:
+- scala actor framework
+
+Orleans: 
+- C# actor framework
 
 
