--- a/doc/13.1 actor.md
+++ b/doc/13.1 actor.md
@@ -67,7 +67,7 @@ scene : actor
       - send_all()
       - send_others()
     - sys_item
-    - sys_drop
+    - sys_drop_item
     - sys_quest
 
 svc_lobby: service
