first shape of server

--- a/doc/13.1.1 액터 생성과 통신.md
+++ b/doc/13.1.1 액터 생성과 통신.md
@@ -19,7 +19,9 @@ json configuration drives the initialization of a server and services.
 
 client 
 
+ - 언어별 구현
  - connect 
  - send
  - channel
+
 
