--- a/doc/13.1.1 액터 생성과 통신.md
+++ b/doc/13.1.1 액터 생성과 통신.md
@@ -3,7 +3,12 @@
 server
 
  - scheduler
- - manage local actors
+ - local actors
+ - provide actor id generator 
+ - not as singleton
+   - service argument
+ - protocol_node
+   - 
 
  - peer_service
    - listen / connect / heartbeat
@@ -25,3 +30,86 @@ client
  - channel
 
 
+## 진행 
+
+- server
+- peer_service 
+- 여러 server 간의 peer 형성과 통신 
+
+- peer_service::ptr server.get_actor<peer_service>()
+  - typeid index
+
+
+## server as an actor system 
+
+- actor는 task이다. 
+- server가 actor system이다. 
+  - 항상 서버 안에서만 생성 가능하다.
+- actor는 id를 갖는다. 전체 시스템에 고유한 아이디이다. 
+  - system unique identifier이다.  
+- actor는 서버가 task_scheduler에서 실행한다. 
+- actor는 init()에서 타이머와 subscription으로 실행한다. 
+
+
+```c++
+class actor : public task
+{
+public: 
+	using id_t = uint64_t;
+
+public:
+	actor(server& _server, id_t parent, id_t id);
+
+	actor(server& _server, id_t id);
+
+	virtual ~actor();
+
+protected:
+	virtual bool init() = 0;
+
+	virtual void fini() = 0;
+
+	server& get_server()
+	{
+		return server_;
+	}
+
+	const server& get_server() const
+	{
+		return server_;
+	}
+
+private: 
+	/// task::on_start(). call init()
+	bool on_start() override;
+
+	/// task::on_execute(). ch_.publish(), timer 실행
+	result on_execute() override;
+
+	/// task::on_finish(). call fini()
+	void on_finish() override;
+
+private: 
+	server& server_;
+	channel ch_;
+	timer timer_;
+};
+```
+
+
+
+## server as a communication wire
+
+
+## server as a cluster node
+
+
+## server as a client receptionist
+
+
+
+
+
+
+
+ 
