--- a/doc/13.1.1 액터 생성과 통신.md
+++ b/doc/13.1.1 액터 생성과 통신.md
@@ -96,6 +96,10 @@ private:
 };
 ```
 
+### actor as a parent of actors
+
+자식들을 생성하고 관리한다. 무엇이 필요한가? 
+내가 소멸할 때 소멸 처리. 필요할 때 제거.
 
 
 ## server as a communication wire
