--- a/doc/construction/13.1.1 액터 생성과 통신.md
+++ b/doc/construction/13.1.1 액터 생성과 통신.md
@@ -101,6 +101,11 @@ private:
 자식들을 생성하고 관리한다. 무엇이 필요한가? 
 내가 소멸할 때 소멸 처리. 필요할 때 제거.
 
+통합된 뷰가 필요하다. local, remote, client를 포괄하고 
+자유롭게 wiring 할 수 있어야 한다.
+그래도 단계적으로 진행하고 다시 조절해서 전체 모습을 만든다.
+
+
 
 ## server as a communication wire
 
