클라이언트. 멋집!

--- a/doc/construction/13.2 서버.md
+++ b/doc/construction/13.2 서버.md
@@ -181,3 +181,16 @@ s.get_node().listen("0.0.0.0:7707", ch);
 실제 진행을 해봐야 알겠으나 actor / protocol 중심을 유지한다.
 
 
+## 정리 
+
+- actor 
+- protocol
+
+두 개만 남긴다. 나머지는 잊는다.
+
+- cluster_service
+- client_service
+
+두 가지로 망을 액터로 추상화 한다. actor_ref이다.
+
+
