--- a/doc/construction/13.3 클라이언트.md
+++ b/doc/construction/13.3 클라이언트.md
@@ -13,8 +13,7 @@ server_.get_node().listen()으로 연결을 받는다.
 이후 아이디를 갖고 actor_ref를 돌려줄 수 있다.
 
 auto aref = server_.get_actor_ref_by_cond( cond );
-server_.bind(aref, down_cb);
-aref.sub();
+server_.bind(aref, ch);
 
 위의 흐름은 다른 액터 사용과 다르지 않다.
 같은 코드로 다른 것을 사용할 수 있는 추상화는 좋다.
