--- a/doc/construction/13.4 클러스터.md
+++ b/doc/construction/13.4 클러스터.md
@@ -41,3 +41,14 @@ bind 내부:
  - remote일 경우 protocol::bind(channel)
  - 로컬일 경우 해당 액터가 내게 뭔가를 보내지 않으면 받을 게 없다.
 
+## 구현
+
+- IDL 메세지 생성과 등록
+- actor_factory 등록과 생성
+- server 구성 파일 로딩
+- server 간 연결
+- peer_service 연결 
+- peer 정보 등록
+- 액터 up / down 전파
+
+
