--- a/doc/construction/13.4.1 구현.md
+++ b/doc/construction/13.4.1 구현.md
@@ -2,6 +2,7 @@
 
 - actor_directory와 actor::ref
 - IDL 메세지 생성과 등록
+ 
 - actor_factory 등록과 생성
 - server 구성 파일 로딩
 - server 간 연결
@@ -25,7 +26,7 @@
 
 많은 변경이 있지는 않아 잘 진행된다. 
 
-hx 기능은 좀 더 진행한 후 정리한다.
+hx 기능은 좀 더 진행한 후 제거하거나 개선하여 재활용한다.
 tx 기능은 db 서비스 작업할 때 다시 살린다.
 
 한번 할 때 제대로 해두는 게 중요하다. 
@@ -33,6 +34,11 @@ tx 기능은 db 서비스 작업할 때 다시 살린다.
 
 잘 사용하여 게임을 쉽게 구성하고 안정적으로 동작하는 게 중요하다. 
 화이팅~~
+
+### vscode extension
+
+syntax highlighting 정도는 필요해 보인다. 코드 생성을 실행하는 건 시간이 많이 걸릴 듯 싶다. 
+목표는 게임 서버를 편하게 만드는 툴을 완결하는 것이므로 너무 멀리 가지는 않는다.
 
 
 
