--- a/doc/construction/13.4.2 bits extension.md
+++ b/doc/construction/13.4.2 bits extension.md
@@ -9,6 +9,11 @@ https://docs.microsoft.com/ko-kr/visualstudio/extensibility/extensibility-hello-
 
 
 ## 언어 확장
-https://docs.microsoft.com/ko-kr/visualstudio/extensibility/extending-the-editor-and-language-services?view=vs-2019
+
+https://docs.microsoft.com/ko-kr/visualstudio/ide/adding-visual-studio-editor-support-for-other-languages?view=vs-2019
+
+vscode와 visual studio가 많은 개념을 공유한다. 경험은 하루 아침에 이룬 게 아니다. 
+새로운 문법은 textmate grammar로 highlighting을 지정할 수 있다.
+
 
 
