서버 시작과 액터 생성. 액터 관리 / 알려진 액터 / 최초 바인딩 채널

--- a/doc/construction/13.4.1 구현.md
+++ b/doc/construction/13.4.1 구현.md
@@ -41,4 +41,82 @@ syntax highlighting 정도는 필요해 보인다. 코드 생성을 실행하는
 목표는 게임 서버를 편하게 만드는 툴을 완결하는 것이므로 너무 멀리 가지는 않는다.
 
 
+## 프로토콜 
+
+syn_peer_up 
+syn_peer_down
+syn_service_up
+syn_service_down
+  
+peer_service 아이디를 전달. 여기에 서버 아이디가 포함되어 있다. 
+
+## 흐름  
+
+시작 흐름:
+ - 서버 구성 파일과 시작 
+ - actor_factory 구현
+ - peer_service 생성과 시작
+   - listen 
+   - connect
+     - 재접속  
+ 
+사용 흐름: 
+ - actor factory
+ - 프로토콜 등록 
+ - 구성 파일 준비 
+
+ - server::start() 호출 
+ - server::run() 체크 
+ - server::finish() 
+
+모든 게 술술 정리된다. 
+
+
+### actor_factory 
+
+특이한 점은 없다. 
+
+### 알려진 액터들 
+
+알려진 액터를 설정할 필요가 있다. 이름으로 검색 가능하다. 
+aref에 이름을 지정할 수 있게 한다. 
+
+actor에 넣는 방법도 생각해 봤으나 원격 액터들도 이름으로 
+액터 디렉토리에서 참조를 얻어야 하기 때문에 이렇게 한다. 
+
+std::string이 추가되면서 약간 무거워졌는데 
+측정해보고 복사 비용을 줄이는 구현을 한다. 
+
+이제 서버 단위로 고유한 이름만 보장이 되면 
+자유롭게 알려진 액터들을 추가하고 사용할 수 있다. 
+
+### 서버 구성 파일과 시작 
+
+scheduler와 액터 생성을 추가했다. 자유롭게 구성하면 된다. 
+액터들이 구성을 로딩할 기회가 있어야 한다. 
+
+virtual 함수로 setup(json)을 추가했다.
+
+### listen / connect interface
+
+tcp_node에서 최초 채널 바인딩을 하도록 수정한다. 
+acceptor / connector로 연결되는 긴 고리를 수정했다.
+
+
+## peer_service
+
+단위 테스트로 진행하는 부담이 있지만 단위 테스트가 프로세스로 나뉜 것만큼 
+편하다면 매우 좋은 구조이다. 노력해서 만들어 본다. 
+
+- 서버 간 연결 
+- syn_peer_up / syn_peer_down 전송
+
+피어 작업이 끝나면 이제 데모로 넘어갈 수 있다.  
+
+
+
+
+
+
+
 
