peer_service: - packets defined and generated - initial subscription structure implemented - each message handler is being implemented

--- a/doc/construction/13.4.3 peer_service.md
+++ b/doc/construction/13.4.3 peer_service.md
@@ -12,6 +12,15 @@ client_service와 함께 분산 처리를 완결한다.
 리모트 액터가 로컬로 옮겨오더라도 동일한 코드로 동작해야 한다. 
 이것이 관건이다. 
 
+## 단계적 구현 
+
+- 구성 파일 읽기 
+- listen 
+- connect
+- 핸들러 등록 
+- 핸들러 구현 
+- 필요한 데이터 추가 
+- syn_peer_up / syn_peer_down 메세지 추가 
 
 
 
