peer_service 연결 관련 구현

--- a/doc/construction/13.4.3 peer_service.md
+++ b/doc/construction/13.4.3 peer_service.md
@@ -23,6 +23,17 @@ client_service와 함께 분산 처리를 완결한다.
 - syn_peer_up / syn_peer_down 메세지 추가 
 
 
+## connect / accept / reconnect / disconnect
 
+- reconnect 
+
+## peer
+
+연결을 피어로 만든다. 프로토콜만 기억한다. 
+
+accept 받은 쪽에서 syn_peer_up을 보낸다. 이에 대한 답으로 syn_peer_up을 보낸다. 
+accepted 에서 오는 syn_peer_up은 응답을 보내지 않는다. 
+
+up까지 받으면 준비된 것이다. 
 
 
