working on peer up / down: - syn_peer_up / syn_peer_down - reconnecting peers on disconnection

--- a/doc/construction/13.4.3 peer_service.md
+++ b/doc/construction/13.4.3 peer_service.md
@@ -36,4 +36,13 @@ accepted 에서 오는 syn_peer_up은 응답을 보내지 않는다.
 
 up까지 받으면 준비된 것이다. 
 
+## 단선 처리 
+
+단선 처리를 잘 되려면 액터들 up / down과 사용 구조가 있어야 한다. 
+
+
+
+
+
+
 
