log and format made clearer.

--- a/doc/construction/13.4.3 peer_service.md
+++ b/doc/construction/13.4.3 peer_service.md
@@ -39,6 +39,17 @@ up까지 받으면 준비된 것이다.
 ## 단선 처리 
 
 단선 처리를 잘 되려면 액터들 up / down과 사용 구조가 있어야 한다. 
+액터 up / down과 리모트 / 클라이언트 액터 사용을 고민해 본다. 
+
+어떻게 찾아서 사용할 지, 어떻게 알 지가 중요하고 또 끊어지거나 내려가면 알 수 있어야 한다. 
+
+## 메인 쓰레드 스케줄링 
+
+test_peer_service의 기본 실행에서 main 쓰레드가 매우 오래 지속되는 문제가 있다. 코드 구조로 보면 
+1초 이내에 종료해야 하는데 그렇지 않다. 
+
+
+
 
 
 
