--- a/doc/construction/13.4.3 peer_service.md
+++ b/doc/construction/13.4.3 peer_service.md
@@ -43,11 +43,18 @@ up까지 받으면 준비된 것이다.
 
 어떻게 찾아서 사용할 지, 어떻게 알 지가 중요하고 또 끊어지거나 내려가면 알 수 있어야 한다. 
 
-## 메인 쓰레드 스케줄링 
+## 디버깅 1 
+
+중간 중간 단단하게 하면서 앞으로 간다. 
+
+### 메인 쓰레드 스케줄링 
 
 test_peer_service의 기본 실행에서 main 쓰레드가 매우 오래 지속되는 문제가 있다. 코드 구조로 보면 
 1초 이내에 종료해야 하는데 그렇지 않다. 
 
+### actor_directory 종료 
+
+~server 부터 소멸자 처리에서 예외가 발생했다. tcp_protocol 내부. 
 
 
 
