fixing object_pool exception on application exit.

--- a/doc/construction/13.4.3 peer_service.md
+++ b/doc/construction/13.4.3 peer_service.md
@@ -52,13 +52,85 @@ up까지 받으면 준비된 것이다.
 test_peer_service의 기본 실행에서 main 쓰레드가 매우 오래 지속되는 문제가 있다. 코드 구조로 보면 
 1초 이내에 종료해야 하는데 그렇지 않다. 
 
+지금은 현상이 잘 나오지 않고 있다. 왜 그럴 수 있는 지 생각하면서 진행한다. 
+
 ### actor_directory 종료 
 
 ~server 부터 소멸자 처리에서 예외가 발생했다. tcp_protocol 내부. 
+람다의 캡처는 매우 미묘한 문제들을 만들 수 있다. this 참조와 같은 것, 
+프로토콜 복사 등은 여러 가지 디버깅이 어려운 복잡한 문제를 만들 수 있다. 
+
+테스트를 제거하고 하나씩 추가하면서 찾은 건 `test_bits_protocol.cpp`에서 부터 문제가 발생한다는 사실이다. 
+
+여기서 시작한다. 
+
+catch의 SECTION()을 if ( false )로 변경하면 disable 시킬 수 있다. 
+에코 테스트에서 문제가 발생했다. 다행이 서버와 피어 서비스 쪽은 괜찮다. 
+
+exit 중 fast fail로 들어가는 이상한 현상이다. 
+함수들이 인라인 되어 디버깅하기가 어렵다. 
+
+디버깅을 하면 동작이 달라진다. 이는 대부분 여러 쓰레드의 `실행 순서 변경`이 원인인 경우가 많다. 
+
+crt terminate handler에서 완료를 하지 못 하면 abort()를 호출한다.
+
+모호했던 부분들, 이해하지 못 한 것들은 항상 다시 올라온다. 명확해야 한다. 
+tcp_node에서 마지막 정리하는 부분, disconnect면 에러 통지 되는 부분이 명확하지 않다. 
+
+```
+Release> .\wise.kernel.test.exe
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+wise.kernel.test.exe is a Catch v2.11.1 host application.
+Run with -? for options
+
+-------------------------------------------------------------------------------
+bits protocol
+  echo performance
+-------------------------------------------------------------------------------
+C:\wisemountain\wise.kernel\test\net\test_bits_protocol.cpp(404)
+...............................................................................
+
+C:\wisemountain\wise.kernel\test\net\test_bits_protocol.cpp(404): FAILED:
+due to a fatal error condition:
+  SIGSEGV - Segmentation violation signal
+
+===============================================================================
+test cases:     20 |     19 passed | 1 failed
+assertions: 100141 | 100140 passed | 1 failed
+
+Release> .\wise.kernel.test.exe
+===============================================================================
+All tests passed (100300 assertions in 31 test cases)
+
+Release> .\wise.kernel.test.exe
+Release> .\wise.kernel.test.exe
+Release> .\wise.kernel.test.exe
+Release> .\wise.kernel.test.exe
+```
+
+몇 가지 힌트가 있다. 우선 echo performance에 메모리 관련 타이밍 오류가 있다는 것. 
+비정상 종료할 때가 더 많다는 것. 
+
+tcp_node에 이전에 구현했던 내용이 완벽했다. 
+거의 처음으로 돌아왔지만 처음과 같지는 않다. 
+
+object_pool.hpp의 153 라인에서 예외가 발생했다. 이 때문에 생긴 문제로 보인다. 
+전에 본 적이 있는데 지나갔고 그래서 문제가 되었다.
 
 
+**이제 알았다!!!**
 
+- object_pool이 static으로 정의된 곳들이 꽤 있다. 
+- 어떤 이유로 해제되지 않은 오브젝트가 있다. 
+- 마지막 종료 시 예외가 발생하면 abort()를 타게 된다. 
+- spdlog로 남기려던 것도 이미 spdlog 인스턴스 소멸 후라서 예외가 나왔다. 
 
+어떻게 정리해야 할까? TLS로 넣은 것들 때문일까? 
+
+object_pool의 150 라인이고 여기서 나온 오류이기 때문에 명확하다.
+현재는 segment_buffer외에는 사용하는 곳이 없다. 
+따라서, 해당 이슈만 추적해 가면 된다. 
 
 
 
