designing actor announcement.

--- a/doc/construction/13.4.4 액터 전파.md
+++ b/doc/construction/13.4.4 액터 전파.md
@@ -14,11 +14,35 @@ peer_service의 기능으로 public actor들을 다른 서버에 전달한다.
 
 ## public actor 
 
+별도로 정해진 public actor는 없다. 액터에서 peer_service를 통해 
+자기를 알리면 public actor가 된다. 
+
+또 peer_service에 syn_peer_up (pup), syn_peer_down (pdown), syn_actor_up (aup), syn_actor_down (adown)을 구독하고 처리하면  서로 연결된다. 
+
+이와 같이 각자에게 위임하는 형태로 public actor를 처리한다. 
+
 
 ## actor 참조 조회 
 
+actor 참조 조회는 몇 가지 인덱스를 필요로 한다. 인덱스에 multiindex가 필요하다. 
+예를 들어, 특정 타잎의 액터들을 조회할 경우가 있다. 
 
-## actor up / down 연동 
+이는 multimap을 사용하여 복사해서 얻어오는 방법을 사용할 수 있다. 
+aup, adown, pup, pdown 처리를 꼼꼼히 봐야 하지만 인덱스 자체는 그렇다. 
+
+operator가 local, remote, client에 대해 동일하게 동작하게 해야한다. 
+이 부분은 마지막에 정리될 것으로 보이며 잘 정리될 것으로 예상한다.
+
+## pup / pdown / aup / adown
+
+길어서 줄여쓴다. 그리고 가장 중요한 부분 중 하나이다. 구독과 전파는 많이 정리되었기 때문에 
+클러스터로 연결된 각 노드들에 있는 액터들을 안정적으로 사용할 수 있으면 
+전체 분산 처리는 상당히 안정된다. 
+
+
+
+
+
 
 
 
