--- a/doc/construction/13.4.4 액터 전파.md
+++ b/doc/construction/13.4.4 액터 전파.md
@@ -33,13 +33,33 @@ aup, adown, pup, pdown 처리를 꼼꼼히 봐야 하지만 인덱스 자체는 
 operator가 local, remote, client에 대해 동일하게 동작하게 해야한다. 
 이 부분은 마지막에 정리될 것으로 보이며 잘 정리될 것으로 예상한다.
 
-## pup / pdown / aup / adown
+## p1 / p0 / a1 / a0
+
+1 : up, 0 : down
 
 길어서 줄여쓴다. 그리고 가장 중요한 부분 중 하나이다. 구독과 전파는 많이 정리되었기 때문에 
-클러스터로 연결된 각 노드들에 있는 액터들을 안정적으로 사용할 수 있으면 
-전체 분산 처리는 상당히 안정된다. 
+클러스터로 연결된 각 노드들에 있는 액터들을 안정적으로 사용할 수 있고 클라이언트를 액터로 포함하여 처리할 수 있다면 전체 분산 처리는 상당히 안정된다. 
 
+up / down 구독과 나의 up / down 전파가 핵심이다. 순서 관계이다. 
 
+## 진행 
+
+- probe_actor를 추가한다. 
+  - probe_actor는 피어들의 probe_actor들에게 메세지를 주기적으로 보낸다. 
+  - 특별히 기능이 있는 액터는 아니고 테스트용 액터이다. 
+  - 기본 테스트와 리그레션 테스트 작성이 쉽도록 wise.kernel 내부에 포함한다. 
+
+- core 구성을 추가하고 peer_service를 여기서 로딩한다. 
+  - 다른 액터들 보다 항상 먼저 생성되고 
+  - server가 준비되면 start를 한다. 
+
+- probe_actor는 시작할 때 peer_service에 이벤트 구독한다. 
+  - remote 액터에 대한 bind 처럼 이벤트 단위 바인드를 추가한다. 
+  - 이 바인드는 probe_actor의 채널로 해당 이벤트를 넘겨주는 람다로 구현한다. 
+  - probe_actor가 내려갈 때 자동으로 구독 취소를 한다. 
+
+- probe_actor는 p1 이벤트를 받으면 연결로 알린다.  
+  - p0 이벤트는 처리하지 않고 a0 이벤트로 처리한다. 
 
 
 
