--- a/doc/construction/13.4.4 액터 전파.md
+++ b/doc/construction/13.4.4 액터 전파.md
@@ -61,6 +61,30 @@ up / down 구독과 나의 up / down 전파가 핵심이다. 순서 관계이다
 - probe_actor는 p1 이벤트를 받으면 연결로 알린다.  
   - p0 이벤트는 처리하지 않고 a0 이벤트로 처리한다. 
 
+### 정리가 필요한 내용들 
+
+- server_.get_actor("peer_service")
+- aref.bind()
+  - 자동 해제 
+  - 쉬운 처리 
+
+기반 구성이 효율을 위해 연결에 기초한다. aref를 사용하여 이를 숨기려는 건 잘 동작하지 않을 수 있다. 
+로컬 액터 간의 메세지 전파는 어떻게 할 것인가? 이를 어떻게 숨길 수 있는가? 
+이를 명확하게 하지 않으면 다 흔들린다. 따라서, 정확한 구조를 먼저 잡고 처리해야 한다. 
+
+다음 단계로 가는 핵심적인 질문이다. 
+
+- actor::ref로 모두 통신이 가능한가? 
+- packet에서 actor::ref를 얻을 수 있는가? 
+  - 얻을 수 없다면 그런 구조가 아니다. 
+  - asrc, adst 이런 걸 포함하면 항상 얻을 수 있다. 
+
+
+
+
+
+
+
 
 
 
