actor_cluster_service. the core of distributed actor referencing.

--- a/doc/construction/13.4.4 액터 전파.md
+++ b/doc/construction/13.4.4 액터 전파.md
@@ -61,41 +61,28 @@ up / down 구독과 나의 up / down 전파가 핵심이다. 순서 관계이다
 - probe_actor는 p1 이벤트를 받으면 연결로 알린다.  
   - p0 이벤트는 처리하지 않고 a0 이벤트로 처리한다. 
 
-### 정리가 필요한 내용들 
+### actor cluster service
 
-- server_.get_actor("peer_service")
-- aref.bind()
-  - 자동 해제 
-  - 쉬운 처리 
+probe_actor (pa) test case: 
 
-기반 구성이 효율을 위해 연결에 기초한다. aref를 사용하여 이를 숨기려는 건 잘 동작하지 않을 수 있다. 
-로컬 액터 간의 메세지 전파는 어떻게 할 것인가? 이를 어떻게 숨길 수 있는가? 
-이를 명확하게 하지 않으면 다 흔들린다. 따라서, 정확한 구조를 먼저 잡고 처리해야 한다. 
+- actor_cluster_service (acs) connects to peers
+- acs sends syn_peer_up 
+- acs sends syn_actor_up for current running actors to newly connected peers on syn_peer_up 
 
-다음 단계로 가는 핵심적인 질문이다. 
+- pa subscribes to acs to pass syn_actor_up, syn_actor_down 
+- pa finds "probe_actor"s by name from acs 
+- pa uses actor::ref 
 
-- actor::ref로 모두 통신이 가능한가? 
-- packet에서 actor::ref를 얻을 수 있는가? 
-  - 얻을 수 없다면 그런 구조가 아니다. 
-  - asrc, adst 이런 걸 포함하면 항상 얻을 수 있다. 
+- acts post syn_actor_down to its channel when a peer is down with or without syn_peer_down 
+  - then, the message is posted to all subscribers including pa 
 
+위 과정의 순서를 확인한다. 연결, up, down, 참조 얻기 간에 타이밍 오류가 있으면 안 된다. 
 
+사용과 동시에 subscribe를 해야 한다.  
 
+- 이미 있는 경우 연결
+- 나중에 up 연결
+- 로컬 / 리모트 연결 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+위 세가지를 actor_cluster_service와 actor_directory로 처리한다. 
 
