actor_cluster renamed from actor_cluster_service

--- a/doc/construction/13.4.4 액터 전파.md
+++ b/doc/construction/13.4.4 액터 전파.md
@@ -61,7 +61,7 @@ up / down 구독과 나의 up / down 전파가 핵심이다. 순서 관계이다
 - probe_actor는 p1 이벤트를 받으면 연결로 알린다.  
   - p0 이벤트는 처리하지 않고 a0 이벤트로 처리한다. 
 
-### actor cluster service
+## actor cluster service
 
 probe_actor (pa) test case: 
 
@@ -84,5 +84,9 @@ probe_actor (pa) test case:
 - 나중에 up 연결
 - 로컬 / 리모트 연결 
 
-위 세가지를 actor_cluster_service와 actor_directory로 처리한다. 
+위 세가지를 actor_cluster와 actor_directory로 처리한다. 
+
+## probe_actor
+
+사용성을 파악하고 구현을 완료하기위한 클래스이다. 
 
